--- a/api/templates/drs_ajax.html
+++ b/api/templates/drs_ajax.html
@@ -25,7 +25,7 @@
                         if (response.status == 1) {
                             let data = response.data;
                             $("#docket_number").val("");
-                            var row = '<tr><td>' + docket_num + '</td><td>' + data.name + '</td><td>' + data.origin + "</td><td><button type='button' id='myButton' class='border-0 bg-transparent text-primary deleteButton'><i class='bi bi-trash3'></i></button></td></tr>";
+                            var row = '<tr><td>' + docket_num + '</td><td>' + data.origin + '</td><td>' + data.name + "</td><td><button type='button' id='myButton' class='border-0 bg-transparent text-primary deleteButton'><i class='bi bi-trash3'></i></button></td></tr>";
                             $('#DrsTable tbody').prepend(row);
                         } else {
                             $('#origin').focus();
