--- a/api/templates/drs.html
+++ b/api/templates/drs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}{% block title %}DRS{% endblock title %}{% load static %}{% block content %}
 
-<div class="container">
+<div class="container back_color">
 
     <div class="modal" id="deleteModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
@@ -63,9 +63,9 @@
                                         <td>{{ drs.total_docs }}</td>
                                         <td>
                                             <button type='button' id='edit_button' class='border-0 bg-transparent text-primary editButton' data-sid="{{ drs.drs_no }}" title="Edit DRS"><i class="bi bi-pencil"></i></button>
-                                            <button type='button' id='upload_button' class='border-0 bg-transparent text-primary uploadButton' data-sid="{{ drs.id }}" title="Upload DRS"><i class="bi bi-upload"></i></button>
+                                            <button type='button' id='upload_button' class='border-0 bg-transparent text-primary uploadButton' data-sid="{{ drs.drs_no }}" title="Upload DRS"><i class="bi bi-upload"></i></button>
                                             <button type='button' id='delete_button' class='border-0 bg-transparent text-primary deleteButton' data-sid="{{ drs.id }}" title="Delete DRS" data-toggle="modal" data-target="#deleteModal"><i class="bi bi-trash3"></i></button>
-                                            <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ drs.id }}" title="Print DRS"><i class="bi bi-printer"></i></button>
+                                            <button type='button' id='print_button' class='border-0 bg-transparent text-primary printButton' data-sid="{{ drs.drs_no }}" title="Print DRS"><i class="bi bi-printer"></i></button>
                                         </td>
                                         <td>Pending</td>
                                     </tr>
