--- a/api/templates/drs_list_ajax.html
+++ b/api/templates/drs_list_ajax.html
@@ -35,9 +35,16 @@
         window.location.href = edit_url;
     });
 
+    // ############################ Upload DRS redirection ###############################
     $("tbody").on("click", ".uploadButton", function() {
         let sid = $(this).attr("data-sid");
         var edit_url = "{% url 'upload_drs' drs_number='sid_value' %}".replace('sid_value', sid);
         window.location.href = edit_url;
+    });
+    // ############################ Print DRS redirection ###############################
+    $("tbody").on("click", ".printButton", function() {
+        let sid = $(this).attr("data-sid");
+        var edit_url = "{% url 'print_drs' drs_number='sid_value' %}".replace('sid_value', sid);
+        window.open(edit_url, "_blank")
     });
 </script>
