--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -145,16 +145,14 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title warning_message"><i class="bi bi-exclamation-triangle-fill"></i> Warning</h5>
+                <h5 class="modal-title warning_message"><i class="bi bi-exclamation-triangle-fill"></i> Information</h5>
                 <button type="button" class="close" aria-label="Close" data-bs-dismiss="modal">                
                 <span aria-hidden="true ">&times;</span>
                 </button>
             </div>
             <div class="modal-body ">
-                <p><b>एरपोस्ट एक्सप्रेस</b> कभी भी किसी भी पार्सल एवं डॉक्यूमेंट की डिलीवरी के लिए किसी भी प्रकार से पैसों की मांग नहीं करता सिवाए COD & TOPAY सभी प्रिय ग्राहकों से आग्रह है की गूगल या जस्ट डाइल में नंबर देखकर फ़ोन करते समय सावधान रहे एवं
-                    किसी भी UPI मोड जैसे गूगल पे,फ़ोन पे के माध्यम से पैसे डिलीवरी के लिए ना भेजे एवं अपनी गोपनीय जानकारी जैसे बैंक खाता ,OTP ,पिन,पासवर्ड इत्यादि किसी को ना बतायें | जनहित में जारी |
-                    <br><br><b>Airpost Xpress</b> never asks for any Money other than COD /TOPAY to get delivered any parcel & document and call carefully on Google / Just Dial Available number and never Transfer money through your Google pay, Phone pay
-                    or by any other UPI Linked mode to get deliver your shipment. Don’t share any confidential details like Bank details,OTP,PIN, & PASSWORD - issued in public interest</p>
+                <b>Airpost Xpress</b> never requests money for address verification, so avoid transferring money through Google Pay, Phone Pay, or any other UPI mode. Do not share confidential information like bank details, OTP, PIN, or passwords. This
+                message is issued in public interest.</p>
             </div>
             <div class="modal-footer ">
                 <button type="button " class="btn btn-secondary " data-bs-dismiss="modal" aria-hidden="true">Close</button>
@@ -174,9 +172,9 @@
         });
     </script>
 </div>
-<!-- <script type="text/javascript ">
+<script type="text/javascript ">
     $(window).on('load', function() {
         $('#myModal').modal('show');
     });
-</script> -->
+</script>
 {% endblock content %}
