--- a/api/templates/network.html
+++ b/api/templates/network.html
@@ -33,12 +33,14 @@
         <div class="col-md-4 mb-4">
             <div class="card h-100">
                 <div class="card-body">
-                    <h4 class="card-title color_for_ro"><b>{{ office.branch_name }}</b></h4>
+                    <h4 class="card-title color_for_ro"><b>AIRPOST XPRESS</b></h4>
                     <!-- <h4 class="font-weight-bold blue-text"></h4> -->
                     <p class="card-text">
                         <h5><b>Zone: {{ office.zone }} </b></h5>
+
                         <!-- <b>Zone:</b> {{ office.zone }} -->
-                        <b>Area name:</b> {{ office.area_name }}
+                        <b>C/o:</b> {{ office.branch_name }}
+                        <br><b>Area name:</b> {{ office.area_name }}
                         <br><b>State: </b>{{ office.state }}
                         <br><b>Pincode:</b> {{ office.pincode }}
                         <br><b>Country:</b> {{ office.country }}
@@ -86,12 +88,13 @@
         <div class="col-md-4 mb-4">
             <div class="card h-100">
                 <div class="card-body">
-                    <h4 class="card-title color_for_ro"><b>{{ office.branch_name }}</b></h4>
+                    <h4 class="card-title color_for_ro"><b>AIRPOST XPRESS</b></h4>
                     <!-- <h4 class="font-weight-bold blue-text"></h4> -->
                     <p class="card-text">
                         <!-- <h5><b>Zone:</b> {{ office.zone }}</h5> -->
                         <h5><b>Zone: {{ office.zone }}</b></h5>
-                        <b>Area name:</b> {{ office.area_name }}
+                        <b>C/o:</b> {{ office.branch_name }}
+                        <br><b>Area name:</b> {{ office.area_name }}
                         <br><b>State: </b>{{ office.state }}
                         <br><b>Pincode:</b> {{ office.pincode }}
                         <br><b>Country:</b> {{ office.country }}
