Added manifest page and set booking session details

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -86,6 +86,7 @@
                     <button type="button" class="btn btn-outline-dark mt-3 dropdown-toggle nav_login_btn mx-0" data-bs-toggle="dropdown" aria-expanded="false">Load</button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{% url 'tracking_history_out' %}">Load Out</a></li>
+                        <li><a class="dropdown-item" href="{% url 'manifest_show' %}">Manifest</a></li>
                         <li><a class="dropdown-item" href="{% url 'tracking_history_in' %}">Load In</a></li>
                     </ul>
                 </div>
