--- a/api/templates/manifest.html
+++ b/api/templates/manifest.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}{% load static %}{% block title %}Manifest{% endblock title %}{% block content %}
 
-<div class="container">
+<div class="container back_color">
     <div class="row">
         <div class="card mt-4">
             <div class="col-12">
                 <div class="card-header">
-                    Manifest Details
+                    Today's Manifest Details
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -31,6 +31,44 @@
                                     </td>
                                 </tr>
                                 {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {% csrf_token %}
+        <div class="row mt-3 justify-content-lg-center">
+            <h5 class="text-center alert alert-light text-black">Search Manifest</h5>
+
+            <div class="col-md-3">
+                <label for="search_date"><b>Date</b></label>
+                <input type="date" name="search_date" id="search_date" class="form-control">
+            </div>
+            <div class="col-md-2">
+                <input type="button" id="search_by_date_btn" value="Search" class="mt-4 btn btn-success">
+            </div>
+
+        </div>
+        <div class="card mt-4">
+            <div class="card-header">
+                Manifest List
+            </div>
+            <div class="card-body">
+                <div class="col-12">
+                    <div class="scrollme">
+                        <table class="table table-striped table-responsive">
+                            <thead>
+                                <tr>
+                                    <th>Sr No</th>
+                                    <th>Date</th>
+                                    <th>Destination</th>
+                                    <th>Qty</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tbody3">
                             </tbody>
                         </table>
                     </div>
